<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/button_to_login_activity"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="37dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/button_already_have_account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_to_register_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_to_register_activity"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="168dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_to_abhichat"
        android:textAlignment="center"
        android:textSize="35dp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_to_login_activity"
        app:layout_constraintEnd_toEndOf="@+id/button_to_login_activity"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/button_to_login_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />
</android.support.constraint.ConstraintLayout>