<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".RegisterUserAcitivity">


    <EditText
        android:id="@+id/reg_username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="53dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/ediittext_shape_corner"
        android:hint="@string/Enter_your_name" />

    <EditText
        android:id="@+id/reg_mailaddress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/reg_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/ediittext_shape_corner"
        android:ems="10"
        android:hint="@string/Enter_email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/reg_mailaddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/ediittext_shape_corner"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="104dp"
        android:background="@android:color/holo_green_light"
        android:text="Register" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_img_for_profile"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/common_full_open_on_phone" />


</RelativeLayout>